<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/pagebg"
    android:background="@drawable/c1"
    tools:context=".LYXForecastHieghtActivity2">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#64AC58"
        android:layout_margin="30dp"
        android:textSize="24dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_birthday"
            android:layout_marginTop="20dp"
            android:textSize="16dp"/>
        <EditText
            android:id="@+id/edt_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="140dp"
            android:ems="10"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/tv_birthday"
            android:inputType="date"/>
        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="@string/btn_date"
            android:layout_toRightOf="@id/edt_birthday"
            android:layout_marginLeft="15dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/tv_fatherheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/father_height"
            android:layout_below="@id/tv_birthday"
            android:layout_marginTop="40dp"
            android:textSize="16dp"/>
        <EditText
            android:id="@+id/edt_fatherHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="12"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/tv_fatherheight"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_text"
            android:layout_below="@id/tv_birthday"
            android:inputType="number"/>
        <TextView
            android:id="@+id/tv_motherheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mother_height"
            android:layout_below="@id/tv_fatherheight"
            android:layout_marginTop="30dp"
            android:textSize="16dp"/>
        <EditText
            android:id="@+id/edt_motherheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="12"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/tv_fatherheight"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_text"
            android:layout_below="@id/edt_fatherHeight"
            android:inputType="number"/>
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_motherheight"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16dp"
                android:text="@string/sex"/>
            <RadioButton
                android:id="@+id/rb_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/gener_man"/>
            <RadioButton
                android:id="@+id/rb_wom"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/rb_man"
                android:layout_height="wrap_content"
                android:text="@string/gener_wom"/>
        </RadioGroup>
        <TextView
            android:id="@+id/tv_grow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:layout_below="@+id/rg_gender"
            android:text="@string/growth"/>
        <TextView
            android:id="@+id/sp_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:layout_toRightOf="@+id/tv_grow"
            android:layout_below="@+id/rg_gender"
            android:layout_marginLeft="60dp"
            android:text="@string/from"/>
        <Spinner
            android:id="@+id/spin_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/date"
            android:prompt="@string/from"
            android:layout_marginTop="20sp"
            android:layout_toRightOf="@+id/sp_from"
            android:layout_below="@+id/rg_gender"
            android:spinnerMode="dialog"/>
        <LinearLayout
            android:id="@+id/ly_grow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_grow"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/checkBox1"/>
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/checkBox2"/>
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/checkBox3"/>
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox4"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_foreget"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_foreget"
            android:textSize="18dp"
            android:layout_marginLeft="36dp"
            android:background="@drawable/button"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/ly_grow"/>
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:text="@string/btn_reset"
            android:textSize="18dp"
            android:background="@drawable/button"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/ly_grow"
            android:layout_toRightOf="@+id/btn_foreget"/>
        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:progressDrawable="@drawable/my_progress_bar"
            android:max="100"
            android:progress="75"
            android:layout_below="@id/btn_foreget"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_message"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:layout_below="@+id/progressbar"/>
        <TextView
            android:id="@+id/tv_msgContent1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:layout_below="@+id/tv_message"/>
        <TextView
            android:id="@+id/tv_msgContent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:layout_below="@+id/tv_msgContent1"/>
        <TextView
            android:id="@+id/tv_msgContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:layout_below="@+id/tv_msgContent2"/>
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:layout_marginLeft="200dp"
            android:autoLink="web"
            android:textColor="#5d9839"
            android:layout_below="@+id/progressbar"/>
    </RelativeLayout>
</LinearLayout>