<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:background="@android:color/background_light"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textSize="23dp"
        android:paddingTop="15dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">
        <TextView
            android:background="@android:color/background_light"
            android:id="@+id/tvMsg"
            android:gravity="center"
            android:text="@string/father_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp" />
        <EditText
            android:background="@android:color/background_light"
            android:id="@+id/etMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:textSize="25dp"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/RadioGroup01"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
     <RadioButton
         android:id="@+id/RadioButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="男" />
        <RadioButton
            android:id="@+id/RadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女" />
         </RadioGroup>
        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingTop="30dp">
          <Button
             android:layout_gravity="center_horizontal"
             android:id="@+id/MyBtn"
             android:text="@string/btn_foreget"
             android:textSize="25dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content" />
         </LinearLayout>
        <LinearLayout
             android:paddingTop="30dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
           <TextView
             android:background="@android:color/background_light"
             android:gravity="center"
             android:text="@string/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="18dp" />
             <TextView
                 android:background="@android:color/background_light"
                 android:id="@+id/tvHsg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:textSize="25dp" />
         </LinearLayout>
    </LinearLayout>